--- a/MToolkit.Windows/MToolkit.Windows.csproj
+++ b/MToolkit.Windows/MToolkit.Windows.csproj
@@ -7,11 +7,11 @@
     <ProjectGuid>{F2548E68-5608-4DF3-A7E9-41474E8316A5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyMvvm</RootNamespace>
-    <AssemblyName>MyMvvm.Universal</AssemblyName>
+    <RootNamespace>MToolkit</RootNamespace>
+    <AssemblyName>MToolkit.Windows</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10240.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -112,9 +112,9 @@
     <Content Include="Properties\MyMvvm.Universal.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyMvvm.Contracts\MyMvvm.Contracts.csproj">
+    <ProjectReference Include="..\MToolkit.Contracts\MToolkit.Contracts.csproj">
       <Project>{3573cc74-0076-4d90-a08b-22facbb0e389}</Project>
-      <Name>MyMvvm.Contracts</Name>
+      <Name>MToolkit.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
